ScNameMgrTable takes a reference, fdo#47307